[package]
name = "tree-sitter-ssh-client-config"
description = "SSH client config grammar for the tree-sitter parsing library"
version = "1.0.3"
keywords = ["incremental", "parsing", "ssh", "client", "config"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/metio/tree-sitter-ssh-client-config"
edition = "2018"
license = "CC0-1.0"
readme = "README.cargo.md"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
