[package]
name = "tree-sitter-afl-rs"
description = "afl.rs fuzzing for the SSH client config grammar"
version = "1.0.0"
keywords = ["incremental", "parsing", "ssh-client-config", "fuzzing"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/metio/tree-sitter-ssh-client-config"
edition = "2018"
license = "CC0-1.0"
publish = false

build = "build.rs"
include = [
  "src/*",
]

[dependencies]
tree-sitter = "0.24.6"
afl = "*"

[build-dependencies]
cc = "1.2"
